@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Allow monsters to apply items even if they do not know the needed skill.
+Requiring the appropriate can_xxx flag is good enough.
+Andreas Kirschbaum 2009-06-17
+
 Add shopitems type 'none' matching items with 'type 0'. Prevents some error
 messages in the server log.
 Andreas Kirschbaum 2009-06-17
